2011-01-12  Bernd Hufmann  <bhufmann@gmail.com> Fix for Bug 333114

	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/KernelStatisticsData.java: Update statistic handling for processes that change name at event of type "exec" and after fork 

2011-01-12  Bernd Hufmann  <bhufmann@gmail.com> Fix or Bug 333486

	* src/org/eclipse/linuxtools/lttng/ui/views/common/AbsTimeUpdateView.java (synchToTime): Added missing update of ParamsUpdater 
	* src/org/eclipse/linuxtools/lttng/ui/views/controlflow/ControlFlowView.java (createPartControl): Removed duplicate "add listeners"-calls
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/HistogramView.java (currentTimeUpdated): Changed setting of center position
	(currentEventChangeNotification): Added time range validation
	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/ParentHistogramCanvas.java (setWindowCenterPosition): Fixed time range validation

2010-12-13  Bernd Hufmann  <bhufmann@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/KernelStatisticsData.java (KeyHelper): Updated comment

2010-12-10  Bernd Hufmann  <bhufmann@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/FixedArray.java (hashCode): Better hashing algorithm

2010-12-08  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/controlflow/ControlFlowView.java: Fix the icon path
	* src/org/eclipse/linuxtools/lttng/ui/views/resources/ResourcesView.java: Fix the icon path

2010-11-25  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/PerspectiveFactory.java: Removed TimeFrame View and the default LTTng perspective

2010-11-23  Francois Chouinard  <fchouinard@gmail.com> Added support for Stats tracing (in java) - no bug

	* .options: Added the SV tracing option
	* src/org/eclipse/linuxtools/lttng/ui/TraceDebug.java: Handling of the SV trace file